--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to vAgents
+title: Welcome to Vagents
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Get started
-      link: /guides/index/
+      link: /guides/
       icon: right-arrow
     - text: Read the Source Code
-      link: https://github.com/eth-easl/vagents
+      link: https://github.com/vagents-ai/vagents
       icon: external
       variant: minimal
 ---
