update examples & docs

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: Welcome to Vagents
-description: Get started building your docs site with Starlight.
+title: Welcome to VAgents
+description: The premier framework for building, orchestrating, and deploying intelligent AI agents.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Build intelligent AI agents with advanced capabilities - orchestration, tool integration, and seamless workflow management.
   actions:
-    - text: Get started
+    - text: Get Started
       link: /en/guides/
       icon: right-arrow
-    - text: Read the Source Code
+    - text: View on GitHub
       link: https://github.com/vagents-ai/vagents
       icon: external
       variant: minimal
@@ -16,19 +16,19 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Why VAgents?
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Intelligent Agent Framework" icon="rocket">
+		Build sophisticated AI agents with advanced reasoning, memory, and tool integration capabilities.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Workflow Orchestration" icon="setting">
+		Create complex multi-agent workflows with built-in orchestration and coordination mechanisms.
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+	<Card title="Extensible Tool System" icon="add-document">
+		Develop and integrate custom tools that extend your agents' capabilities beyond basic text processing.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Production Ready" icon="approve-check">
+		Deploy agents at scale with robust error handling, monitoring, and performance optimization features.
 	</Card>
 </CardGrid>
