--- a/docs/src/content/docs/zh-cn/index.mdx
+++ b/docs/src/content/docs/zh-cn/index.mdx
@@ -16,19 +16,19 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## 下一步
+## 为什么选择 VAgents？
 
 <CardGrid stagger>
-	<Card title="更新内容" icon="pencil">
-		编辑 `src/content/docs/index.mdx` 来查看此页面的变化。
-	</Card>
-	<Card title="添加新内容" icon="add-document">
-		在 `src/content/docs` 中添加 Markdown 或 MDX 文件来创建新页面。
-	</Card>
-	<Card title="配置您的网站" icon="setting">
-		编辑 `astro.config.mjs` 文件中的 Starlight 配置。
-	</Card>
-	<Card title="了解更多" icon="open-book">
-		阅读 [Starlight 文档](https://starlight.astro.build/) 了解更多信息。
-	</Card>
+    <Card title="智能代理框架" icon="rocket">
+        构建具有高级推理、记忆和工具集成能力的复杂AI代理。
+    </Card>
+    <Card title="工作流编排" icon="setting">
+        创建具有内置编排和协调机制的复杂多代理工作流。
+    </Card>
+    <Card title="可扩展工具系统" icon="add-document">
+        开发和集成自定义工具，将代理能力扩展到基础文本处理之外。
+    </Card>
+    <Card title="生产就绪" icon="approve-check">
+        通过强大的错误处理、监控和性能优化功能大规模部署代理。
+    </Card>
 </CardGrid>
