update docs organization

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: Build intelligent AI agents with advanced capabilities - orchestration, tool integration, and seamless workflow management.
   actions:
     - text: Get Started
-      link: /en/guides/
+      link: /en/getting-started/
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/vagents-ai/vagents
