--- a/docs/src/content/docs/zh-cn/index.mdx
+++ b/docs/src/content/docs/zh-cn/index.mdx
@@ -6,7 +6,7 @@ hero:
   tagline: 恭喜您建立了一个新的 Starlight 项目！
   actions:
     - text: 开始使用
-      link: /zh-cn/guides/
+      link: /zh-cn/getting-started/
       icon: right-arrow
     - text: 阅读源代码
       link: https://github.com/vagents-ai/vagents
